File created: / - /users - otros - /hello

--- a/nodeapi/views/index.ejs
+++ b/nodeapi/views/index.ejs
@@ -3,6 +3,7 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <script src="/javascripts/test.js"></script>
   </head>
   <body>
@@ -17,6 +18,12 @@
     <div>
       <p id="demo"></p>
     </div>
+    <div>
+      <ul id="linksNodeapi">
+
+      </ul>
+    </div>
+
 
   </body>
 
