--- a/nodeapi/views/index.ejs
+++ b/nodeapi/views/index.ejs
@@ -19,8 +19,13 @@
       <p id="demo"></p>
     </div>
     <div>
-      <ul id="linksNodeapi">
-
+      <p id="linksNodeapi"></p>
+      <ul>
+        <li><a href="http://localhost:3000">home</a></li>
+        <li><a href="http://localhost:3000/users">users</a></li>
+        <li><a href="http://localhost:3000/otros">otros</a></li>
+        <li><a href="http://localhost:3000/hello">Just told you hello</a></li>
+        <li><a href="http://localhost:3000/hello.html">Hello Page</a></li>    
       </ul>
     </div>
 
