Añadido un forEach para cada links con id test

--- a/nodeapi/views/index.ejs
+++ b/nodeapi/views/index.ejs
@@ -18,7 +18,7 @@
     <div>
       <p id="demo"></p>
     </div>
-    <div>
+<!--     <div>
       <p id="linksNodeapi"></p>
       <ul>
         <li><a href="http://localhost:3000">home</a></li>
@@ -27,8 +27,10 @@
         <li><a href="http://localhost:3000/hello">Just told you hello</a></li>
         <li><a href="http://localhost:3000/hello.html">Hello Page</a></li>    
       </ul>
+    </div> -->
+    <div>
+      <ul id="test"></ul>
     </div>
-
 
   </body>
 
