--- a/nodeapi/views/users.ejs
+++ b/nodeapi/views/users.ejs
@@ -3,6 +3,8 @@
   <head>
     <title><%= userTitle %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <script src="/javascripts/test.js"></script>
   </head>
   <body>
     <h1><%= userTitle %></h1>
@@ -10,6 +12,14 @@
     <br />
     <h2>Learning Web site for NodeJS for users page</h2>
     <p>Done by <%= name %></p>
+    
+    <div>
+      <p id="demo"></p>
+    </div>
+
+    <div>
+      <ul id="test"></ul>
+    </div>
 
   </body>
 </html>
