--- a/nodeapi/public/stylesheets/style.css
+++ b/nodeapi/public/stylesheets/style.css
@@ -24,7 +24,7 @@ li {
   margin-top: 1rem;
 }
 
-#linksNodeapi {
+/* #linksNodeapi {
     background: #88F5D7;
     color: #0002FF; 
     font-size: 16px; 
@@ -41,4 +41,4 @@ li {
 }
 #linksNodeapi:active {
     background: #144E75; 
-}
+} */
