--- a/nodeapi/public/stylesheets/style.css
+++ b/nodeapi/public/stylesheets/style.css
@@ -21,24 +21,23 @@ ul {
 }
 
 li {
-  margin-top: 1rem;
+  margin-top: 20px;
 }
 
-/* #linksNodeapi {
-    background: #88F5D7;
-    color: #0002FF; 
-    font-size: 16px; 
-    line-height: 16px; 
-    padding: 6px; 
-    border-radius: 10px; 
-    text-decoration: none; 
-    box-shadow: rgb(0, 0, 0) 5px 5px 15px 5px; 
-    border: 2px solid rgb(28, 110, 164); display: inline-block;
+li a {
+  text-decoration: none;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-right: 20px;
+  padding-left: 20px;
+  max-width: 50px;
+  border-radius: 5px;
+  background-color: lightgrey;
+  color:black;
+  transition: all 0.3s linear;
 }
-#linksNodeapi:hover {
-    background: #5AE2F5; 
-    box-shadow: rgb(0, 0, 0) 2px 2px 5px 2px;
+
+a:hover {
+  background-color: grey;
+  color: white;
 }
-#linksNodeapi:active {
-    background: #144E75; 
-} */
