navbar and download file in user webpage

--- a/nodeapi/views/index.ejs
+++ b/nodeapi/views/index.ejs
@@ -6,7 +6,12 @@
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <script src="/javascripts/test.js"></script>
   </head>
+
   <body>
+  
+    <nav>
+      <ul id="test"></ul>
+    </nav>
     <h1>NodeJS with <%= title %></h1>
     <p>Welcome to NodeJS done with <%= title %></p>
     <br />
@@ -17,9 +22,13 @@
     </div>
     <div>
       <p id="demo"></p>
-    </div>
-<!--     <div>
-      <p id="linksNodeapi"></p>
+
+  </body>
+</html>
+
+<!--  ANTIGUA VERSION   
+    <div>
+        <p id="linksNodeapi"></p>
       <ul>
         <li><a href="http://localhost:3000">home</a></li>
         <li><a href="http://localhost:3000/users">users</a></li>
@@ -28,10 +37,3 @@
         <li><a href="http://localhost:3000/hello.html">Hello Page</a></li>    
       </ul>
     </div> -->
-    <div>
-      <ul id="test"></ul>
-    </div>
-
-  </body>
-
-</html>
