--- a/nodeapi/public/stylesheets/style.css
+++ b/nodeapi/public/stylesheets/style.css
@@ -3,10 +3,6 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-a {
-  color: #00B7FF;
-}
-
 .img {
   display: block;
   margin-left: auto;
@@ -16,12 +12,17 @@ a {
   max-width: 400px;
 }
 
+nav {
+
+}
+
 ul {
   list-style-type: none;
 }
 
 li {
   margin-top: 20px;
+  display: inline-block;
 }
 
 li a {
@@ -31,7 +32,6 @@ li a {
   padding-right: 20px;
   padding-left: 20px;
   max-width: 50px;
-  border-radius: 5px;
   background-color: lightgrey;
   color:black;
   transition: all 0.3s linear;
@@ -41,3 +41,9 @@ a:hover {
   background-color: grey;
   color: white;
 }
+
+button a {
+  text-decoration: none;
+  color: black;
+}
+
